--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,5 @@ DEBUG=TRUE
 
 # Front-End Variables
 VITE_BASENAME=/
-#VITE_BACKEND_URL=
+VITE_BACKEND_URL=https://fantastic-space-capybara-r4pvr6p494663xw6x-3001.app.github.dev/
+JWT_SECRET_KEY=
